tests/data/checker_var_re_asset/good/1.php
<?php
/**
 *
 * @author k.vagin
 */

function vb()
{
	$a = 1;
	$a++;
	$a = 2;

	return $a;
}