tests/data/checker_var_re_asset/bad/1.php
<?php
/**
 *
 * @author k.vagin
 */

function vb()
{
	$b = 3;
	$a = 1;
	$b++;
	$a = 2;

	return $a + $b;
}